--- a/composer.json
+++ b/composer.json
@@ -17,25 +17,21 @@
     ],
     "require": {
         "php": "^8.0",
-        "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^8.73 || ^9.0"
+        "spatie/laravel-package-tools": "^1.11.1",
+        "illuminate/contracts": "^8.73"
     },
     "require-dev": {
         "nunomaduro/collision": "^5.10",
-        "nunomaduro/larastan": "^1.0",
-        "orchestra/testbench": "^6.22",
+        "orchestra/testbench": "^v6.24.1",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "friendsofphp/php-cs-fixer": "^3.6"
     },
     "autoload": {
         "psr-4": {
-            "NotificationChannels\\SmsSpeedaMobile\\": "src",
-            "NotificationChannels\\SmsSpeedaMobile\\Database\\Factories\\": "database/factories"
+            "NotificationChannels\\SmsSpeedaMobile\\": "src"
         }
     },
     "autoload-dev": {
@@ -44,9 +40,9 @@
         }
     },
     "scripts": {
-        "analyse": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage"
+        "test-coverage": "vendor/bin/pest --coverage",
+        "format": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php --allow-risky=yes"
     },
     "config": {
         "sort-packages": true,
