--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,18 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "spatie/laravel-package-tools": "^1.11.1",
-        "illuminate/contracts": "^8.73"
+        "php": "^8.1",
+        "spatie/laravel-package-tools": "^1.12",
+        "illuminate/contracts": "^v9.19"
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.10",
-        "orchestra/testbench": "^v6.24.1",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
+        "nunomaduro/collision": "^v6.0.0",
+        "orchestra/testbench": "^v7.0.0",
+        "pestphp/pest": "^v1.21.3",
+        "pestphp/pest-plugin-laravel": "^v1.2.0",
         "phpstan/extension-installer": "^1.1",
         "phpunit/phpunit": "^9.5",
-        "friendsofphp/php-cs-fixer": "^3.6"
+        "friendsofphp/php-cs-fixer": "^3.9"
     },
     "autoload": {
         "psr-4": {
