--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,20 @@
         {
             "name": "Siraj Kimuli",
             "email": "pworld.designer@gmail.com",
+            "homepage": "https://kimulisiraj.me",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.12",
-        "illuminate/contracts": "^v9.19"
+        "illuminate/contracts": "^v9.19|^10.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^v6.0.0",
-        "orchestra/testbench": "^v7.0.0",
-        "pestphp/pest": "^v1.21.3",
-        "pestphp/pest-plugin-laravel": "^v1.2.0",
+        "orchestra/testbench": "^v7.0.0|^8.0",
+        "pestphp/pest": "^v1.21.3|^v2.0.0",
+        "pestphp/pest-plugin-laravel": "^v1.2.0|^v2.0.0",
         "phpstan/extension-installer": "^1.1",
         "phpunit/phpunit": "^9.5",
         "friendsofphp/php-cs-fixer": "^3.9"
