--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,18 +13,18 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.1]
-        laravel: [9.*]
+        php: [8.2, 8.3, 8.4]
+        laravel: [10.*, 11.*, v12.*]
         stability: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 9.*
-          - testbench: 7.*
+          - laravel: 10.*
+          - testbench: 8.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
