--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": [
         "kimulisiraj",
         "laravel",
+        "SMS",
         "sms-speeda-mobile-laravel"
     ],
     "homepage": "https://github.com/kimulisiraj/sms-speeda-mobile-laravel",
@@ -17,18 +18,18 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.12",
-        "illuminate/contracts": "^v9.19|^10.0"
+        "php": "^8.2|^8.3|^8.4",
+        "spatie/laravel-package-tools": "^1.92.7",
+        "illuminate/contracts": "^10|^11|^v12"
     },
     "require-dev": {
-        "nunomaduro/collision": "^v6.0.0",
-        "orchestra/testbench": "^v7.0.0|^8.0",
-        "pestphp/pest": "^v1.21.3|^v2.0.0",
-        "pestphp/pest-plugin-laravel": "^v1.2.0|^v2.0.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpunit/phpunit": "^9.5",
-        "friendsofphp/php-cs-fixer": "^3.9"
+        "driftingly/rector-laravel": "^2.1",
+        "friendsofphp/php-cs-fixer": "^v3.91.0",
+        "laravel/pint": "^1.26",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "pestphp/pest": "^v3.0.0|^v4.0.0",
+        "pestphp/pest-plugin-laravel": "^v3.0.0|^v4.0.0",
+        "spatie/pest-plugin-test-time": "^1.1|^2.2"
     },
     "autoload": {
         "psr-4": {
@@ -43,13 +44,13 @@
     "scripts": {
         "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/php-cs-fixer fix --config=.php_cs.dist.php --allow-risky=yes"
+        "test:lint": "pint --parallel --max-processes=10",
+        "test:refactor": "rector process"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
+            "pestphp/pest-plugin": true
         }
     },
     "extra": {
