chore(deps-dev): Update Pest and Pint dependencies
- Widens support for `pestphp/pest` and `pestphp/pest-plugin-laravel` to include v2, v3, and v4.

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
         "friendsofphp/php-cs-fixer": "^v3.91.0",
         "laravel/pint": "^1.26",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "pestphp/pest": "^v3.0.0|^v4.0.0",
-        "pestphp/pest-plugin-laravel": "^v3.0.0|^v4.0.0",
+        "pestphp/pest": "^v2.0.0|^v3.0.0|^v4.0.0",
+        "pestphp/pest-plugin-laravel": "^v2.0.0|^v3.0.0|^v4.0.0",
         "spatie/pest-plugin-test-time": "^1.1|^2.2"
     },
     "autoload": {
