--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^8.2|^8.3|^8.4",
         "spatie/laravel-package-tools": "^1.92.7",
-        "illuminate/contracts": "^10|^11|^v12"
+        "illuminate/contracts": "^11|^v12"
     },
     "require-dev": {
         "driftingly/rector-laravel": "^2.1",
